fix(application-prod): wrong url.

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://database-mysql-cursomc.cmwcxwfado7e.us-east-2.rds.amazonaws.com/curso_spring
+spring.datasource.url=mysql://database-mysql-cursomc.cmwcxwfado7e.us-east-2.rds.amazonaws.com/curso_spring
 spring.datasource.username=adminadmin
 spring.datasource.password=adminadmin
 
