feat(EmailService, templates): send html page through email.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=test
 
 default.sender=rafaels.zanella@gmail.com
 default.recipient=rafaels.zanella@gmail.com
