feat(security, CredenciaisDTO, UserDetailsServiceImpl): add jwt login system.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.profiles.active=test
 
 default.sender=rafaels.zanella@gmail.com
 default.recipient=rafaels.zanella@gmail.com
+
+jwt.secret=SequenciaDeCaracteresParaAssinarToken
+jwt.expiration=60000
